--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -1,7 +1,9 @@
-<div class="marketing-site-hero">
-  <div class="marketing-site-hero-content">
-    <h1>Yeti Snowcone Agency</h1>
-    <p class="subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-    <a href="#" class="round button">learn more</a>
+
+
+<div class="site-hero {{ hero-class }}" style="background-image: url('{{ hero-bg }}');">
+  <div class="site-hero-content site-hero-content--fullwidth">
+    <div class="site-hero-content-inner site-hero-content-inner--light">
+      <h1>Generation Homes Services Offered</h2>
+    </div>
   </div>
 </div>
