--- a/src/partials/site-footer/site-footer.html
+++ b/src/partials/site-footer/site-footer.html
@@ -1,8 +1,10 @@
 <footer class="site-footer">
   <div class="grid-x medium-up-3 grid-padding-x">
     <div class="cell">
-      <h4 class="site-footer-name">Yeti Snowcone</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolorem accusantium architecto id quidem, itaque nesciunt quam ducimus atque.</p>
+      <h4 class="site-footer-name">How can we help?</h4>
+      <p>
+        As a leading general contractor in the Fresno, California area, we are always looking for ways to help when it comes to home repairs. We post photos from our current home remodel projects as well as helpful tips when it comes to DIY project and projects that, well... maybe you shouldn't do you yourself. We welcome feedback and questions, let us know how we can help.
+      </p>
       <ul class="menu site-footer-menu-social simple">
         <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
          <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
@@ -13,19 +15,19 @@
        <h4 class="site-footer-title">Contact Info</h4>
       <div class="site-footer-block">
         <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p>100 W Rincon<br>San Francisco, CA 94015</p>
+        <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
       </div>
       <div class="site-footer-block">
         <i class="fa fa-phone" aria-hidden="true"></i>
-        <p>1 (800) 555-5555</p>
+        <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
       </div>
       <div class="site-footer-block">
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <p>yetirules@fakeemail.com</p>
+        <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
       </div>
     </div>
     <div class="cell">
-      <h4 class="site-footer-title">Instagram</h4>
+      <h4 class="site-footer-title">Affiliations</h4>
       <div class="grid-x medium-up-3 grid-padding-x grid-padding-y">
         <div class="cell">
           <img src="https://placehold.it/75" alt="" />
