--- a/src/partials/sticky-menu/sticky-menu.html
+++ b/src/partials/sticky-menu/sticky-menu.html
@@ -1,7 +1,14 @@
 <div data-sticky-container>
   <div class="sticky" data-sticky data-sticky-on="small" data-options="marginTop:0;">
     <div class="menubar-container">
-
+      <div class="menubar-top align-right">
+        <div class="grid-container text-right">
+          <a class="menubar-top-link" href="tel:1 (559) 323-9700">
+            1 (559) 323-9700
+            <img src="/assets/img/icons/phone--light.svg" alt="phone" class="icon--phone" />
+          </a>
+        </div>
+      </div>
       <div class="menubar-grid grid-container grid-x grid-padding-x grid-padding-y">
         <div class="cell small-8">
           <a href="/" class="menubar-logo"><img src="/assets/img/logo-green.svg" alt="Generation Homes" class="header-logo" width="200" /></a>
@@ -25,11 +32,9 @@
     <li>
       <h3 class="h5"><a href="/services.html">Services</a></h3>
       <ul class="vertical menu">
-        <li><a href="#">Item 1A</a></li>
-        <li><a href="#">Item 1B</a></li>
-        <li><a href="#">Item 1C</a></li>
-        <li><a href="#">Item 1D</a></li>
-        <li><a href="#">Item 1E</a></li>
+        <li><a href="/services-remodel.html">Home Remodel</a></li>
+        <li><a href="/services-new-homes.html">New Home Construction</a></li>
+        <li><a href="/services-commercial.html">Commercial</a></li>
       </ul>
     </li>
     <li>
