--- a/src/assets/scss/components/sticky-menu.scss
+++ b/src/assets/scss/components/sticky-menu.scss
@@ -23,6 +23,9 @@
   box-shadow: 0 2px 8px -1px rgba(0,0,0,0.06);
   position: relative;
 }
+.menubar-grid {
+  align-items: center;
+}
 .menu-icon {
   text-indent: -9999px;
 }
@@ -46,20 +49,10 @@
     margin-left: 1rem;
   }
 }
-.menubar-top {
-  background-color: $black;
-  padding: .5rem 1rem;
-  &-link {
-    color: $white;
-    &:hover {
-      color: $color-cream;
-    }
+.menubar-phone-link {
+  color: $black;
+  font-weight: 700;
+  &:hover {
+    color: $anchor-color;
   }
-}
-
-.icon--phone {
-  width: 18px;
-  height: 18px;
-  margin-left: 18px;
-  margin-right: 2rem;
 }
