--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -1,9 +1,10 @@
 
+<div class="hero {{ hero-class }}">
 
-<div class="site-hero {{ hero-class }}" style="background-image: url('{{ hero-bg }}');">
-  <div class="site-hero-content site-hero-content--fullwidth">
-    <div class="site-hero-content-inner site-hero-content-inner--light">
-      <h1>Generation Homes Services Offered</h2>
+  <div class="hero-content">
+    <div class="hero-content-inner">
+      <h1>{{{ hero-title }}}</h1>
     </div>
   </div>
+  <img src="{{ hero-bg }}" sizes="100vw" alt="" class="hero-bg" />
 </div>
