--- a/src/partials/site-footer/site-footer.html
+++ b/src/partials/site-footer/site-footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="grid-x medium-up-3 grid-padding-x">
     <div class="cell">
-      <h4 class="site-footer-name">How can we help?</h4>
+      <h4 class="site-footer-name">Life changes...<br />Good values shouldn't</h4>
       <p>
         As a leading general contractor in the Fresno, California area, we are always looking for ways to help when it comes to home repairs. We post photos from our current home remodel projects as well as helpful tips when it comes to DIY project and projects that, well... maybe you shouldn't do you yourself. We welcome feedback and questions, let us know how we can help.
       </p>
