--- a/src/partials/site-footer/site-footer.html
+++ b/src/partials/site-footer/site-footer.html
@@ -1,51 +1,54 @@
 <footer class="site-footer">
-  <div class="grid-x medium-up-3 grid-padding-x">
-    <div class="cell">
-      <h4 class="site-footer-name">Life changes...<br />Good values shouldn't</h4>
-      <p>
-        As a leading general contractor in the Fresno, California area, we are always looking for ways to help when it comes to home repairs. We post photos from our current home remodel projects as well as helpful tips when it comes to DIY project and projects that, well... maybe you shouldn't do you yourself. We welcome feedback and questions, let us know how we can help.
-      </p>
-      <ul class="menu site-footer-menu-social simple">
-        <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
-         <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-      </ul>
-    </div>
-    <div class="cell">
-       <h4 class="site-footer-title">Contact Info</h4>
-      <div class="site-footer-block">
-        <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
+  <div class="grid-container">
+    <div class="grid-x medium-up-3 grid-padding-x">
+
+      <div class="cell">
+        <h4 class="site-footer-name">Life changes...<br />Good values shouldn't</h4>
+        <p>
+If you’re seeking home remodeling, a new custom home or commercial property improvements demanding expert construction solutions, Generation Homes can meet your every need.
+        </p>
+        <ul class="menu site-footer-menu-social simple">
+          <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+        </ul>
       </div>
-      <div class="site-footer-block">
-        <i class="fa fa-phone" aria-hidden="true"></i>
-        <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
+      <div class="cell">
+        <h4 class="site-footer-title">Contact Info</h4>
+        <div class="site-footer-block">
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+          <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
+        </div>
+        <div class="site-footer-block">
+          <i class="fa fa-phone" aria-hidden="true"></i>
+          <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
+        </div>
+        <div class="site-footer-block">
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+          <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
+        </div>
       </div>
-      <div class="site-footer-block">
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
-      </div>
-    </div>
-    <div class="cell">
-      <h4 class="site-footer-title">Affiliations</h4>
-      <div class="grid-x medium-up-3 grid-padding-x grid-padding-y">
-        <div class="cell">
-          <img src="https://placehold.it/75" alt="" />
-        </div>
-        <div class="cell">
-          <img src="https://placehold.it/75" alt="" />
-        </div>
-        <div class="cell">
-          <img src="https://placehold.it/75" alt="" />
-        </div>
-        <div class="cell">
-          <img src="https://placehold.it/75" alt="" />
-        </div>
-        <div class="cell">
-          <img src="https://placehold.it/75" alt="" />
-        </div>
-        <div class="cell">
-          <img src="https://placehold.it/75" alt="" />
+      <div class="cell">
+        <h4 class="site-footer-title">Affiliations</h4>
+        <div class="grid-x medium-up-3 grid-padding-x grid-padding-y">
+          <div class="cell">
+            <img src="https://placehold.it/75" alt="" />
+          </div>
+          <div class="cell">
+            <img src="https://placehold.it/75" alt="" />
+          </div>
+          <div class="cell">
+            <img src="https://placehold.it/75" alt="" />
+          </div>
+          <div class="cell">
+            <img src="https://placehold.it/75" alt="" />
+          </div>
+          <div class="cell">
+            <img src="https://placehold.it/75" alt="" />
+          </div>
+          <div class="cell">
+            <img src="https://placehold.it/75" alt="" />
+          </div>
         </div>
       </div>
     </div>
