--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="off-canvas-content" data-off-canvas-content>
-    {{> sticky-menu }}
+    {{> sticky-menu-v2 }}
     <section class="site-content">
       {{> body }}
     </section>
