--- a/src/partials/site-footer/site-footer.html
+++ b/src/partials/site-footer/site-footer.html
@@ -1,53 +1,36 @@
 <footer class="site-footer">
   <div class="grid-container">
-    <div class="grid-x medium-up-3 grid-padding-x">
+    <div class="grid-x grid-padding-x">
 
-      <div class="cell">
+      <div class="cell medium-12 large-6">
         <h4 class="site-footer-name">Life changes...<br />Good values shouldn't</h4>
-        <p>
-If you’re seeking home remodeling, a new custom home or commercial property improvements demanding expert construction solutions, Generation Homes can meet your every need.
+        <p class="site-footer-hello">
+          If you’re seeking home remodeling, a new custom home or commercial property improvements demanding expert construction solutions, Generation Homes can meet your every need.
         </p>
-        <ul class="menu site-footer-menu-social simple">
-          <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-        </ul>
       </div>
-      <div class="cell">
-        <h4 class="site-footer-title">Contact Info</h4>
-        <div class="site-footer-block">
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
-        </div>
-        <div class="site-footer-block">
-          <i class="fa fa-phone" aria-hidden="true"></i>
-          <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
-        </div>
-        <div class="site-footer-block">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-          <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
-        </div>
+      <div class="cell medium-6 large-3">
+        <h4 class="site-footer-title">Connect With Us</h4>
+        <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
+        <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
+        <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
+        <p>
+          Lic. #871183 - Commercial<br />
+          Lic. #821276 - Residential
+        </p>
       </div>
-      <div class="cell">
+      <div class="cell medium-6 large-3">
+
         <h4 class="site-footer-title">Affiliations</h4>
-        <div class="grid-x medium-up-3 grid-padding-x grid-padding-y">
-          <div class="cell">
-            <img src="https://placehold.it/75" alt="" />
+        <div class="grid-x grid-padding-x">
+          <div class="cell bbb">
+            <a href="https://www.bbb.org/us/ca/fresno/profile/general-contractor/generation-commercial-inc-1066-15003051">
+            <img src="/assets/img/affiliations/AB-seal-horz.svg" alt="" />
+            <span class="rating">A+</span>
+            </a>
           </div>
           <div class="cell">
-            <img src="https://placehold.it/75" alt="" />
-          </div>
-          <div class="cell">
-            <img src="https://placehold.it/75" alt="" />
-          </div>
-          <div class="cell">
-            <img src="https://placehold.it/75" alt="" />
-          </div>
-          <div class="cell">
-            <img src="https://placehold.it/75" alt="" />
-          </div>
-          <div class="cell">
-            <img src="https://placehold.it/75" alt="" />
+            <a title="National Association of the Remodeling Industry (NARI)" href="https://nari.org/" target="_blank"><img style="margin: 1rem 1rem 0 0;" width="48" height="48" src="/assets/img/affiliations/nari.jpg" alt="National Association of the Remodeling Industry (NARI)" /></a>
+            <a title="The National Kitchen + Bath Association (NKBA)" href="https://www.nkba.org/" target="_blank"><img  style="margin: 1rem 1rem 0 0;" width="48" height="48" src="/assets/img/affiliations/nkba.jpg" alt="The National Kitchen + Bath Association (NKBA)" /></a>
           </div>
         </div>
       </div>
@@ -55,17 +38,18 @@ If you’re seeking home remodeling, a new custom home or commercial property im
   </div>
   <div class="site-footer-bottom">
     <div class="grid-x medium-up-2 grid-padding-x">
-      <div class="cell medium-up-2">
-        <p>&copy; 2021 All rights reserved</p>
+      <div class="cell copyright">
+        <p>&copy; Generation Homes 2021 All rights reserved</p>
       </div>
-      <div class="cell">
+      <div class="cell links">
         <ul class="menu site-footer-bottom-links">
           <li><a href="/">Home</a></li>
           <li><a href="/services.html">Services</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Works</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/reviews.html">Reviews</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a class="social" href="https://www.houzz.com/pro/generation-homes/generation-homes" target="_blank"><img width="24" height="24" src="/assets/img/affiliations/houzz.png" alt="houzz" /></a></li>
+          <li><a class="social" href="http://www.facebook.com/pages/Generation-Homes/210356869008904" target="_blank"><img width="24" height="24" src="/assets/img/affiliations/fb.png" alt="facebook" /></a>
+</li>
         </ul>
       </div>
     </div>
