--- a/src/partials/sticky-menu/sticky-menu-v2.html
+++ b/src/partials/sticky-menu/sticky-menu-v2.html
@@ -1,12 +1,12 @@
 <div data-sticky-container>
   <div class="sticky" data-sticky data-sticky-on="small" data-options="marginTop:0;">
-    <div class="menubar-container">
+    <div class="menubar-container menubar-container-v2">
 
       <div class="menubar-grid grid-container grid-x grid-padding-x grid-padding-y">
 
 
-        <div class="cell small-8 text-center">
-          <a href="/" class="menubar-logo"><img src="/assets/img/logo-green.svg" alt="Generation Homes" class="header-logo" width="200" /></a>
+        <div class="cell small-8 large-9 text-left">
+          <a href="/" class="menubar-logo"><img src="/assets/img/logo-white.svg" alt="Generation Homes" class="header-logo" width="200" /></a>
         </div>
 
         <div class="cell small-2 text-right">
@@ -15,17 +15,20 @@
             <img src="/assets/img/icons/phone--light.svg" alt="phone" class="show-for-small-only icon--phone" width="18" height="18" />
           </a>
         </div>
-        <div class="cell small-2">
+
+        <div class="cell small-2 large-1 text-right">
           <div class="title-bar align-right" data-hide-for="null">
-            <button class="menu-icon" type="button" data-toggle="header-menu">Menu</button>
+            <button class="menu-icon-v2" type="button" data-toggle="header-menu">Menu</button>
           </div>
         </div>
+
+
       </div>
     </div>
   </div>
 </div>
 
-<div class="header-menu off-canvas position-left" id="header-menu" data-off-canvas>
+<div class="header-menu header-menu-v2 off-canvas position-right" id="header-menu" data-off-canvas>
   <button class="close-button" aria-label="Close menu" type="button" data-close>
     <span aria-hidden="true">&times;</span>
   </button>
@@ -36,23 +39,20 @@
       <ul class="vertical menu">
         <li><a href="/services-remodel.html">Home Remodeling</a></li>
         <li><a href="/services-new-homes.html">New Home Construction</a></li>
-        <li><a href="/services-commercial.html">Commercial</a></li>
+        <li><a href="/services-commercial.html">Commercial Projects</a></li>
       </ul>
     </li>
     <li>
-      <h3 class="h5"><a href="#">Item 2</a></h3>
-      <ul class="vertical menu">
-        <li><a href="#">Item 2A</a></li>
-        <li><a href="#">Item 2B</a></li>
-      </ul>
+      <h3 class="h5"><a href="/reviews.html">Reviews</a></h3>
     </li>
     <li>
-      <h3 class="h5"><a href="#">Item 3</a></h3>
-      <ul class="vertical menu">
-        <li><a href="#">Item 3A</a></li>
-        <li><a href="#">Item 3B</a></li>
-      </ul>
+      <h3 class="h5"><a href="/contact.html">Contact Us</a></h3>
     </li>
   </ul>
+  <div class="social">
+    <a href="https://www.houzz.com/pro/generation-homes/generation-homes" target="_blank"><img width="32" height="32" src="/assets/img/affiliations/houzz.png" alt="houzz" /></a>
+    <a href="http://www.facebook.com/pages/Generation-Homes/210356869008904" target="_blank"><img width="32" height="32" src="/assets/img/affiliations/fb.png" alt="facebook" /></a>
+  </div>
+
 
 </div>
