--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -533,7 +533,7 @@ $offcanvas-reveal-zindex: 12;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($white, 0.25);
+$offcanvas-exit-background: rgba(10, 10, 10, 0.45);
 $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
