--- a/src/partials/site-footer/site-footer.html
+++ b/src/partials/site-footer/site-footer.html
@@ -5,7 +5,7 @@
       <div class="cell medium-12 large-6">
         <h4 class="site-footer-name">Life changes...<br />Good values shouldn't</h4>
         <p class="site-footer-hello">
-          If you’re seeking home remodeling, a new custom home or commercial property improvements demanding expert construction solutions, Generation Homes can meet your every need.
+          If you’re seeking home remodeling, painting, a new custom home, or commercial property improvements demanding expert construction solutions, Generation Homes & Commercial can meet your every need.
         </p>
       </div>
       <div class="cell medium-6 large-3">
@@ -14,8 +14,7 @@
         <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
         <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
         <p>
-          Lic. #871183 - Commercial<br />
-          Lic. #821276 - Residential
+          Lic. #871183<br />
         </p>
       </div>
       <div class="cell medium-6 large-3">
@@ -29,8 +28,8 @@
             </a>
           </div>
           <div class="cell">
-            <a title="National Association of the Remodeling Industry (NARI)" href="https://nari.org/" target="_blank"><img style="margin: 1rem 1rem 0 0;" width="48" height="48" src="/assets/img/affiliations/nari.jpg" alt="National Association of the Remodeling Industry (NARI)" /></a>
-            <a title="The National Kitchen + Bath Association (NKBA)" href="https://www.nkba.org/" target="_blank"><img  style="margin: 1rem 1rem 0 0;" width="48" height="48" src="/assets/img/affiliations/nkba.jpg" alt="The National Kitchen + Bath Association (NKBA)" /></a>
+https://www.biafm.org/
+
           </div>
         </div>
       </div>
@@ -39,17 +38,17 @@
   <div class="site-footer-bottom">
     <div class="grid-x medium-up-2 grid-padding-x">
       <div class="cell copyright">
-        <p>&copy; Generation Homes 2021 All rights reserved</p>
+        <p>&copy; Generation Homes & Commercial 2021 All rights reserved</p>
       </div>
       <div class="cell links">
         <ul class="menu site-footer-bottom-links">
           <li><a href="/">Home</a></li>
           <li><a href="/services.html">Services</a></li>
+          <li><a href="/the-phoenix-project.html">The Phoenix Project</a></li>
           <li><a href="/reviews.html">Reviews</a></li>
           <li><a href="/contact.html">Contact</a></li>
           <li><a class="social" href="https://www.houzz.com/pro/generation-homes/generation-homes" target="_blank"><img width="24" height="24" src="/assets/img/affiliations/houzz.png" alt="houzz" /></a></li>
-          <li><a class="social" href="http://www.facebook.com/pages/Generation-Homes/210356869008904" target="_blank"><img width="24" height="24" src="/assets/img/affiliations/fb.png" alt="facebook" /></a>
-</li>
+          <li><a class="social" href="http://www.facebook.com/pages/Generation-Homes/210356869008904" target="_blank"><img width="24" height="24" src="/assets/img/affiliations/fb.png" alt="facebook" /></a></li>
         </ul>
       </div>
     </div>
