--- a/src/partials/sticky-menu/sticky-menu-v3.html
+++ b/src/partials/sticky-menu/sticky-menu-v3.html
@@ -6,13 +6,13 @@
 
 
         <div class="cell small-8 large-9 text-left">
-          <a href="/" class="menubar-logo"><img src="/assets/img/logo-green.svg" alt="Generation Homes" class="header-logo" width="200" /></a>
+          <a href="/" class="menubar-logo"><img src="/assets/img/logo-green.svg" alt="Generation Homes & Commercial" class="header-logo" width="200" /></a>
         </div>
 
         <div class="cell small-2 text-right">
           <a class="menubar-phone-link" href="tel:1 (559) 323-9700">
             <span class="hide-for-small-only">559.323.9700</span>
-            <img src="/assets/img/icons/phone--light.svg" alt="phone" class="show-for-small-only icon--phone" width="18" height="18" />
+            <img src="/assets/img/icons/phone.svg" alt="phone" class="show-for-small-only icon--phone" width="18" height="18" />
           </a>
         </div>
 
@@ -38,9 +38,13 @@
       <h3 class="h5"><a href="/services.html">Services</a></h3>
       <ul class="vertical menu">
         <li><a href="/services-remodel.html">Home Remodeling</a></li>
-        <li><a href="/services-new-homes.html">New Home Construction</a></li>
+        <li><a href="/services-custom-homes.html">Custom Homes</a></li>
         <li><a href="/services-commercial.html">Commercial Projects</a></li>
+        <li><a href="/services-painting.html">Painting</a></li>
       </ul>
+    </li>
+    <li>
+      <h3 class="h5"><a href="/the-phoenix-project.html">The Phoenix Project</a></h3>
     </li>
     <li>
       <h3 class="h5"><a href="/reviews.html">Reviews</a></h3>
