--- a/src/partials/sticky-menu/sticky-menu.html
+++ b/src/partials/sticky-menu/sticky-menu.html
@@ -6,7 +6,7 @@
 
 
         <div class="cell small-8 text-center">
-          <a href="/" class="menubar-logo"><img src="/assets/img/logo-green.svg" alt="Generation Homes" class="header-logo" width="200" /></a>
+          <a href="/" class="menubar-logo"><img src="/assets/img/logo-green.svg" alt="Generation Homes & Commercial" class="header-logo" width="200" /></a>
         </div>
 
         <div class="cell small-2 text-right">
@@ -35,7 +35,7 @@
       <h3 class="h5"><a href="/services.html">Services</a></h3>
       <ul class="vertical menu">
         <li><a href="/services-remodel.html">Home Remodeling</a></li>
-        <li><a href="/services-new-homes.html">New Home Construction</a></li>
+        <li><a href="/services-custom-homes.html">New Home Construction</a></li>
         <li><a href="/services-commercial.html">Commercial</a></li>
       </ul>
     </li>
