--- a/src/assets/scss/components/sticky-menu.scss
+++ b/src/assets/scss/components/sticky-menu.scss
@@ -97,7 +97,7 @@
 }
 .header-logo {
   width: 100%;
-  max-width: 240px;
+  max-width: 340px;
 }
 .header-menu {
   background-color: $white;
@@ -138,7 +138,7 @@
       margin-top: 2.25rem;
     }
     a {
-      //color: $white;
+      color: #485E2A;
     }
     .close-button {
       //color: $white;
@@ -177,7 +177,7 @@
     margin-top: 2.25rem;
   }
   a {
-    //color: $white;
+    color: #485E2A;
   }
   .close-button {
     //color: $white;
