--- a/src/partials/sticky-menu/sticky-menu-v3.html
+++ b/src/partials/sticky-menu/sticky-menu-v3.html
@@ -35,6 +35,9 @@
 
   <ul class="vertical menu header-menu-content">
     <li>
+      <h3 class="h5"><a href="/index.html">Home</a></h3>
+    </li>
+    <li>
       <h3 class="h5"><a href="/services.html">Services</a></h3>
       <ul class="vertical menu">
         <li><a href="/services-remodel.html">Home Remodeling</a></li>
