--- a/src/assets/scss/components/site-footer.scss
+++ b/src/assets/scss/components/site-footer.scss
@@ -9,6 +9,7 @@ $site-footer-bg:#96a580;
 .site-footer {
   background: $color-light-green;
   color: $white;
+  margin-top: 2rem;
   padding: 2rem 0 0;
   .site-footer-menu-social a {
     color: $white;
